tests/parser/bad/missing_semicolon.hel
// @name missing_semicolon
// @phase parser
// @expect error

import std.io

a = 1
b = 2

main = () : IO<()> {
    io.println("nope")
}
